feat: add recommend friend api